--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,56 @@
-@import "bootstrap/dist/css/bootstrap.min.css";
+body {
+    font-family: Arial, sans-serif;
+    background: linear-gradient(135deg, #43cea2, #185a9d); /* Gradient */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    text-align: center;
+    padding: 50px;  
+    color: #333;
+    min-height: 100vh; /*forces window height*/
+  }
+  
+  h1 {
+    font-size: 2em;
+    margin-bottom: 20px;
+  }
+  
+  button {
+    -webkit-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+    -moz-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+    -ms-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+    -o-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+    transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+    display: block;
+    margin: 20px auto;
+    max-width: 180px;
+    text-decoration: none;
+    border-radius: 5px;
+    border: 0px;
+    padding: 20px 30px;
+    background-color: transparent;
+    font-size: 15px;
+  }
 
-body{
-    background: white;
-}
+  button.gen {
+    color: #00bfff; /* Azul Dodger */
+    box-shadow: #00bfff 0 0px 0px 2px inset;
+  }
+  
+  button.gen:hover {
+    color: #ffffff;
+    box-shadow: #1e90ff 0 0px 0px 40px inset;
+    cursor: pointer;
+  }
+
+  #excuse {
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #222;
+    background: #fff;
+    padding: 15px;
+    border-radius: 10px;
+    display: inline-block;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.2); /*shadow of the box*/
+  }
+  
